terraform-vpc/security.tf
resource "aws_security_group" "common_app_sg" {
    vpc_id = aws_vpc.common_account.id
    name = "application_security_group"
    description = "security groups for the applications"
    ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    ingress{
        from_port = 443
        to_port = 443
        protocol = "tcp"
    }
    ingress{
        from_port = 3306
        to_port = 3306
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress{
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "Applicationtraffic"
    }
}


resource "aws_security_group" "bastion_host" {
    vpc_id = aws_vpc.common_account.id
    name = "bastion_security_group"
    description = "security groups for the applications"
    ingress{
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }
    egress{
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
    tags = {
      Name = "bastion_securitygroup"
    }
}
